hphp/hack/test/typecheck/mixed/mixed_member_access.php.exp
File "mixed_member_access.php", line 4, characters 9-11:
You are trying to access the method `bar` but this is a mixed value. Use a **specific** class or interface name. (Typing[4064])
  File "mixed_member_access.php", line 3, characters 23-27:
  Definition is here
File "mixed_member_access.php", line 8, characters 8-11:
Typing error (Typing[4064])
  File "mixed_member_access.php", line 8, characters 14-16:
  You are trying to access the property `bar` but this is a mixed value. Use a **specific** class or interface name.
  File "mixed_member_access.php", line 7, characters 25-29:
  Definition is here
File "mixed_member_access.php", line 12, characters 10-12:
You are trying to access the method `bar` but this is a nonnull value. Use a **specific** class or interface name. (Typing[4062])
  File "mixed_member_access.php", line 11, characters 34-38:
  Definition is here
File "mixed_member_access.php", line 16, characters 9-11:
You are trying to access the method `bar` but this is a nonnull value. Use a **specific** class or interface name. (Typing[4062])
  File "mixed_member_access.php", line 15, characters 25-31:
  Definition is here
